--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ipoteka",
   "private": true,
   "version": "0.0.0",
-    "type": "module",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -15,7 +15,8 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "react-input-mask": "^3.0.0-alpha.2"
+    "react-input-mask": "^3.0.0-alpha.2",
+    "vite-plugin-vue-devtools": "^1.0.0-rc.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
