--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "chartjs-plugin-annotation": "^3.0.1",
     "date-fns": "^3.0.6",
     "react": "^18.2.0",
+    "react-calendar": "^4.7.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-input-mask": "^3.0.0-alpha.2",
