--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-calendar": "^4.7.0",
     "react-chartjs-2": "^5.2.0",
+    "react-currency-mask": "^1.3.1",
     "react-dom": "^18.2.0",
     "react-input-mask": "^3.0.0-alpha.2",
     "vite-plugin-vue-devtools": "^1.0.0-rc.8"
