--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-currency-mask": "^1.3.1",
     "react-dom": "^18.2.0",
+    "react-imask": "^7.3.0",
     "react-input-mask": "^3.0.0-alpha.2",
     "vite-plugin-vue-devtools": "^1.0.0-rc.8"
   },
